--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "start": "node index.js",
     "start-nodb": "node index-nodb.js"
   },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/dudash/openshift-examples/node-mongo"
