trying to fix auth for mongo v3

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "Apache 2.0",
   "dependencies": {
     "express": "*",
-    "mongodb": "*"
+    "mongodb": "*",
+    "util": "*"
   }
 }
